--- a/app/build.gradle
+++ b/app/build.gradle
@@ -50,8 +50,12 @@ dependencies {
 
     implementation 'androidx.legacy:legacy-support-v4:1.0.0'
 
-    implementation 'com.google.dagger:dagger:2.35.1'
-    kapt 'com.google.dagger:dagger-compiler:2.29.1'
+    implementation "com.google.dagger:dagger:$dagger_version"
+    implementation "com.google.dagger:dagger-android:$dagger_version"
+    implementation "com.google.dagger:dagger-android-support:$dagger_version"
+    kapt "com.google.dagger:dagger-compiler:$dagger_version"
+    kapt "com.google.dagger:dagger-android-processor:$dagger_version"
+    compileOnly "javax.annotation:jsr250-api:$javax_annotation_version"
     implementation "androidx.fragment:fragment-ktx:1.3.4"
     implementation "androidx.work:work-runtime-ktx:2.6.0-beta01"
     implementation 'androidx.core:core-ktx:1.5.0'
