--- a/build.gradle
+++ b/build.gradle
@@ -6,6 +6,8 @@ buildscript {
         retrofit_version = '2.9.0'
         room_version = "2.2.5"
         coroutines_version = '1.3.4'
+        javax_annotation_version = "1.0"
+        dagger_version = "2.29.1"
     }
     repositories {
         google()
