--- a/app/build.gradle
+++ b/app/build.gradle
@@ -13,7 +13,7 @@ android {
     }
 
     defaultConfig {
-        applicationId "com.example.sirius"
+        applicationId "com.example.gallery"
         minSdkVersion 24
         targetSdkVersion 30
         versionCode 1
@@ -47,8 +47,9 @@ dependencies {
     testImplementation 'junit:junit:4.+'
     androidTestImplementation 'androidx.test.ext:junit:1.1.2'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.3.0'
-
     implementation 'androidx.legacy:legacy-support-v4:1.0.0'
+
+    implementation "androidx.viewpager2:viewpager2:1.0.0"
 
     implementation "com.google.dagger:dagger:$dagger_version"
     implementation "com.google.dagger:dagger-android:$dagger_version"
